demo/manifests/demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: vault-sa
      containers:
        - name: app
          image: burtlo/exampleapp-ruby:k8s
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: webapp
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
spec:
  entryPoints:
  - web
  routes:
    - kind: Rule
      match: 'Host(`test.k3s.v3nc.org`)'
      middlewares:
      - name: http-to-https
        namespace: demo
      services:
        - kind: Service
          name: webapp
          namespace: demo
          port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
spec:
  entryPoints:
  - websecure
  routes:
    - kind: Rule
      match: 'Host(`test.k3s.v3nc.org`)'
      services:
        - kind: Service
          name: webapp
          namespace: demo
          port: 8080
  tls:
    secretName: demo-https-cert
